# CineScore-AI

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  README.md  pyproject.toml  versions.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  question.yml
.github/workflows/: auto-tag-release.yml  ci.yml  release.yml
packaging/windows/: CineScoreAI.iss
scripts/: dev_entry.py  install_resolve_runtime.py  resolve_entry.py
src/cinescore_ai/: __init__.py  app.py  audio.py  config.py  frame_extractor.py  gemini.py  gemini_music.py  http_client.py  localization.py  marker_directives.py  paths.py  providers.py  resolve.py  resolve_install.py  secrets.py  services.py  update_service.py  version.py  workflow.py
src/cinescore_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cinescore_ai/ui/: __init__.py  main_window.py  workers.py
tests/: _path_setup.py  test_audio.py  test_config.py  test_gemini.py  test_gemini_music.py  test_localization.py  test_marker_directives.py  test_providers.py  test_resolve.py  test_resolve_install.py  test_secrets.py  test_services.py  test_ui_smoke.py  test_update_service.py  test_workflow.py
