[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinescore-ai"
version = "0.1.3"
description = "DaVinci Resolve AI audio composer settings UI and credential manager."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "PySide6>=6.6",
    "requests>=2.31",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
timeout = 30
timeout_method = "thread"
testpaths = ["tests"]
